--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<properties>
 		<mockito.version>1.9.5</mockito.version>
 
-		<junit.version>4.11</junit.version>
+		<junit.version>4.12-beta-2</junit.version>
 		<hamcrest.version>1.3</hamcrest.version>
         <logback.version>1.1.2</logback.version>
     </properties>
