--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,8 @@
         <junit.version>4.12-beta-2</junit.version>
         <hamcrest.version>1.3</hamcrest.version>
         <logback.version>1.1.2</logback.version>
+
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
